<package format="3">
  <name>joint_trajectory_action_tools</name>
  <version>0.0.12</version>
  <description>
    joint_trajectory_action_tools
  </description>

  <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>

  <author>Melonee Wise</author>
 
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/joint_trajectory_action_tools</url>
  <url type="bugtracker">https://github.com/PR2/pr2_common_actions/issues</url>
  <url type="repository">https://github.com/PR2/pr2_common_actions</url>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>joint_trajectory_action</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>

  <exec_depend>roslib</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>joint_trajectory_action</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>pr2_controllers_msgs</exec_depend>

</package>
