<package>
  <name>joint_trajectory_generator</name>
  <version>0.4.0</version>
  <description>joint_trajectory_generator</description>
  <maintainer email="eitan@willowgarage.com">Maintained by Eitan Marder-Eppstein</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/joint_trajectory_generator</url>

  <author>Eitan Marder-Eppstein</author>
  <author>Wim Meeussen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>joint_trajectory_action</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>urdf</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>joint_trajectory_action</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>urdf</run_depend>

  <!-- <test_depend>actionlib</test_depend> -->
  <!-- <test_depend>angles</test_depend> -->
  <!-- <test_depend>kdl</test_depend> -->
  <!-- <test_depend>joint_trajectory_action</test_depend> -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>urdf</test_depend> -->

  <export>
  </export>
</package>