<package>
  <name>joint_trajectory_generator</name>
  <description>
     joint_trajectory_generator
  </description>
  <author>Eitan Marder-Eppstein, Wim Meeussen</author>
  <version>0.0.0</version>
  <maintainer email="dash@clearpathrobotics.com">Dash</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/joint_trajectory_generator</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>kdl</build_depend>
  <build_depend>joint_trajectory_action</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>urdf</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>joint_trajectory_action</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>urdf</run_depend>
</package>


