<?xml version="1.0"?>
<package>
  <name>pr2_arm_move_ik</name>
  <version>0.0.0</version>
  <description>The pr2_arm_move_ik package</description>

  <maintainer email="foo@bar.todo">Melonee Wise, Wim Meeussen</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/pr2_arm_move_ik</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pr2_arm_kinematics</build_depend>
  <build_depend>pr2_common_action_msgs</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>urdf</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>pr2_arm_kinematics</run_depend>
  <run_depend>pr2_common_action_msgs</run_depend>
  <run_depend>pr2_controllers_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>urdf</run_depend>

  <export>
  </export>
</package>